config/overlays/dev/patches/reindex-image-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: activity-controller-manager
  namespace: activity-system
spec:
  template:
    spec:
      containers:
      - name: manager
