config/overlays/dev/patches/httproute-patch.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: activity-ui
  namespace: activity-system
spec:
  parentRefs:
    - name: default-gateway
      namespace: envoy-gateway-system
